[tool.uv]
index-strategy = "unsafe-best-match"
required-environments = [
    "sys_platform == 'win32' and platform_machine == 'AMD64'",
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
    "sys_platform == 'darwin' and platform_machine == 'arm64'",
]
override-dependencies = [
    "nvidia-nccl-cu12; sys_platform == 'linux'",
]
default-groups = ["gpu"]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

[project]
name = "viettts-tinhthe"
version = "1.1.7"
description = "VietTTS by Tinhthe - Advanced on-device Vietnamese TTS"
readme = "README_PYPI.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
# --- PHẦN NÀY QUAN TRỌNG ĐỂ KHÔNG BỊ LỖI MODULE ---
dependencies = [
    "phonemizer>=3.3.0",
    "neucodec>=0.0.1",
    "vieneu-utils",
    "librosa>=0.11.0",
    "gradio>=5.0.0",
    "onnxruntime>=1.16.0",
    "datasets>=3.0.0",
    "torch",
    "torchaudio",
    "perth>=0.2.0",
    "llama-cpp-python>=0.2.0",
    "requests",
    "pyyaml",
]

[project.urls]
"Homepage" = "https://github.com/ninjavanxuantruong/viettts"
"Repository" = "https://github.com/ninjavanxuantruong/viettts"

[project.optional-dependencies]
gpu = [
    "lmdeploy; sys_platform != 'darwin'",
    "transformers",
    "accelerate",
]

[tool.setuptools]
packages = ["vieneu", "vieneu_utils"]

[tool.uv.sources]
torch = [
    { index = "pytorch", marker = "sys_platform != 'darwin'" },
    { index = "pypi", marker = "sys_platform == 'darwin'" }
]
torchaudio = [
    { index = "pytorch", marker = "sys_platform != 'darwin'" },
    { index = "pypi", marker = "sys_platform == 'darwin'" }
]
