[project]
name = "viettts-tinhthe"
version = "1.1.7"
description = "VietTTS by Tinhthe"
requires-python = ">=3.10"
dependencies = [
    "phonemizer==3.3.0",
    "neucodec==0.0.4",
    "librosa==0.11.0",
    "gradio==5.49.1",
    "onnxruntime==1.23.2",
    "datasets",
    "torch==2.8.0",
    "torchaudio==2.8.0",
    "perth==1.0.0",
    "llama-cpp-python==0.3.16",
    "requests",
    "pyyaml",
]

[tool.uv]
index-strategy = "unsafe-best-match"

[tool.setuptools]
packages = ["vieneu", "vieneu_utils"]
